--- a/TestPlaceProjProgra2/TestPlaceProjProgra2.vcxproj
+++ b/TestPlaceProjProgra2/TestPlaceProjProgra2.vcxproj
@@ -129,10 +129,14 @@
   <ItemGroup>
     <ClCompile Include="BonificacionesMontoFijo.cpp" />
     <ClCompile Include="BonificacionesPorcentuales.cpp" />
+    <ClCompile Include="DeduccionPorcentual.cpp" />
     <ClCompile Include="DeduccionesPermanentes.cpp" />
+    <ClCompile Include="DeduccionFija.cpp" />
     <ClCompile Include="FactoryBonificacionesMontoFijo.cpp" />
     <ClCompile Include="FactoryBonificacionesPorcentuales.cpp" />
     <ClCompile Include="FactoryDeduccionesPermanentes.cpp" />
+    <ClCompile Include="FactoryDeduccionFija.cpp" />
+    <ClCompile Include="FactoryDeduccionPorcentual.cpp" />
     <ClCompile Include="FactoryHorasFeriadoTrabajado.cpp" />
     <ClCompile Include="FactoryHorasOrdinariasDiurno.cpp" />
     <ClCompile Include="FactoryHorasOrdinariasMixta.cpp" />
@@ -147,11 +151,15 @@
   <ItemGroup>
     <ClInclude Include="BonificacionesMontoFijo.h" />
     <ClInclude Include="BonificacionesPorcentuales.h" />
+    <ClInclude Include="DeduccionPorcentual.h" />
     <ClInclude Include="DeduccionesPermanentes.h" />
+    <ClInclude Include="DeduccionFija.h" />
     <ClInclude Include="FactoryBonificacionesMontoFijo.h" />
     <ClInclude Include="FactoryBonificacionesPorcentuales.h" />
     <ClInclude Include="FactoryDeducciones.h" />
     <ClInclude Include="FactoryDeduccionesPermanentes.h" />
+    <ClInclude Include="FactoryDeduccionFija.h" />
+    <ClInclude Include="FactoryDeduccionPorcentual.h" />
     <ClInclude Include="FactoryHorasFeriadoTrabajado.h" />
     <ClInclude Include="FactoryHorasOrdinariasDiurno.h" />
     <ClInclude Include="FactoryHorasOrdinariasMixta.h" />
